--- a/pages/boxes/boxes.wxss
+++ b/pages/boxes/boxes.wxss
@@ -13,18 +13,21 @@
   position: absolute;left: 360rpx;bottom: -8rpx;
   width: 40rpx;height: 40rpx;
 }
-.swiper-view{height: 360rpx;width: 100%;}
-.slide-image{
-  width: 500rpx;height: 300rpx;border-radius: 20rpx;margin: 24rpx auto;display: block;
+.swiper-view{width: 100%;height: 360rpx;overflow: hidden;position: relative;}
+.r-swiper{
+  width: 100%;height: 360rpx;overflow: hidden;
 }
-.feature-swiper{display: block;width: 100%;height: 100%}
+.r-swiper-item{
+  width: 100%;height: 100%;overflow: hidden;
+}
+.slide-image{display: block;width: 500rpx;height: 300rpx;border-radius: 20rpx;margin: 30rpx auto;}
 .boxs-view{color: #7A70C8;font-size: 28rpx;padding: 60rpx 46rpx 0;position: relative;}
 .open-box-title{font-size: 52rpx;margin-bottom: 20rpx}
-.boxs-gift-square{width: 480rpx;height: 480rpx;margin: 320rpx auto 94rpx;background: orange;position: relative;}
+.boxs-gift-square{width: 480rpx;height: 480rpx;margin: 320rpx auto 94rpx;position: relative;}
 .same-box{
   width: 252rpx;height: 210rpx;
-  background: #fff
 }
+.box-usual-img{display: block;width: 100%;height: 100%}
 .first-box{
   position: absolute;left: 112rpx;bottom: 316rpx
 }
@@ -34,7 +37,7 @@
 .third-box{
   position: absolute;right: -60rpx;bottom: 36rpx
 }
-.invite-view{width: 660rpx;min-height: 320rpx;margin: 0 auto 40rpx;font-size: 32rpx;color: #C7C7CC}
+.invite-view{width: 660rpx;min-height: 120rpx;margin: 0 auto;font-size: 32rpx;color: #C7C7CC}
 .num-text{margin: 0 4rpx}
 .num-color{color: #F97956}
 .invite-tip-view{
@@ -42,16 +45,16 @@
 }
 .avatars-view{}
 .key-icon{
-  width: 40rpx;height: 40rpx;margin-right: 20rpx;background: #fff
+  width: 40rpx;height: 40rpx;margin-right: 20rpx;
 }
-.refresh-icon{width: 40rpx;height: 40rpx;margin-left: 20rpx;background: #fff}
+.refresh-icon{width: 40rpx;height: 40rpx;margin-left: 20rpx;}
 .user-avatar{display: inline-block;width: 52rpx;height: 52rpx;margin-right: 30rpx;border: 1rpx solid #eee;border-radius: 50%;margin-bottom: 10rpx}
 button[disabled]{background: none}
 button[disabled]:not([type]){background: none}
 button{padding: 0;margin: 0;background: none}
 button::after{border: none}
 .button-hover{background: none}
-.invite-btn{width: 340rpx;height: 100rpx;margin: 8rpx auto 30rpx;background: #eee}
+.invite-btn{width: 340rpx;height: 100rpx;margin: 8rpx auto 30rpx;}
 .invite-btn-img{display: block;width: 100%;height: 100%}
 .rewards-view{width: 680rpx;min-height: 300rpx;margin: 0 auto 20rpx;}
 .rewards-head{display: flex;align-items: center;color: #7A70C8;font-size: 32rpx;margin-bottom: 40rpx}
@@ -82,7 +85,7 @@ button::after{border: none}
 .prize-text{margin-left: 14rpx;max-width: 300rpx;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
 .look-detail-text{color: #E5E7ED;font-size: 24rpx;margin: -6rpx 20rpx 0 0}
 .rank-dot-line{width: 640rpx;height: 2rpx;border-top: 2rpx dotted rgba(199, 199, 204, 0.35);margin: 0 auto 30rpx;}
-.rank-swiper{height: 200rpx;}
+.rank-swiper{height: 300rpx;}
 .gift-botom-line{width: 670rpx;height: 2rpx;background: rgba(255, 255, 255, 0.2);margin: 0 auto 60rpx;}
 .rules-cont{overflow: hidden;}
 .rule-list-cont{
@@ -110,3 +113,122 @@ button::after{border: none}
 .key-text{width: 476rpx;margin: 0 auto 80rpx;}
 .give-key-num{color: #F97956;margin: 0 10rpx}
 .key-first-text{margin-bottom: 20rpx;}
+.box-shake{
+  -webkit-animation:shake 1.2s linear;-webkit-animation-fill-mode:forwards;
+  animation:shake 1.2s linear;animation-fill-mode:forwards;
+}
+@keyframes shake {
+  0% {
+  	transform: scale(1);
+    -webkit-transform: scale3d(1, 1, 1);
+
+  }
+  6%{
+    -webkit-transform: scale(.9) rotate(-8deg);
+    -webkit-transform: scale3d(1, 1, 1) rotate(0, 0, 1, -8deg);
+  }
+  18%, 30%,42%{
+    -webkit-transform: scale(1.1) rotate(8deg);
+    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 8deg);
+
+  }
+  12%,24%, 36%,48%{
+    -webkit-transform: scale(1.1) rotate(-8deg);
+    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -8deg);
+
+  }
+  54%{
+    -webkit-transform: scale(1);
+    -webkit-transform: scale3d(1, 1, 1);
+  }
+  60%{
+    -webkit-transform: scale(1);
+    -webkit-transform: scale3d(1, 1, 1);
+  }
+  80% {
+    -webkit-transform: scale(1);
+    -webkit-transform: scale3d(1, 1, 1);
+  }
+  90% {
+    -webkit-transform: scale(1);
+    -webkit-transform: scale3d(1, 1, 1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    -webkit-transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes byQr {
+	0% {
+  	transform:scale(1)
+  }
+  50% {
+  	transform:scale(1.2)
+  }
+  100% {
+  	transform:scale(1)
+  }
+}
+.hand-tip{
+  position: absolute;right: -50rpx;top:164rpx;
+  animation: byQr 2s linear infinite;
+  width: 165rpx;height: 40rpx;
+}
+.get-gift-dialog{
+  /* position: fixed;bottom: 206rpx;left:30rpx;z-index: 1; */
+  position: absolute;margin-left: -335rpx;margin-top:-480rpx;left: 50%;top: 50%;
+  background: rgba(255, 255, 255, 0.9);
+  width: 670rpx;height: 960rpx;border-radius: 30rpx;overflow: hidden;
+  /* margin: 170rpx auto 0;position: relative; */
+}
+.close-icon{width: 54rpx;height: 54rpx;position: absolute;top:30rpx;right: 30rpx;}
+.gift-tips-cont{width: 512rpx;height: 476rpx;margin: 20rpx auto 32rpx;position: relative;}
+.close-icon{width: 54rpx;height: 54rpx;position: absolute;top:30rpx;right: 30rpx;}
+.gift-img-tip{display: block;width: 100%;height: 100%;}
+.gift-text-tip{position: absolute;width: 472rpx;height: 136rpx;left: 20rpx;bottom: 110rpx;font-size: 40rpx;color: #fff;text-align: center;}
+.gift-name{color: #FFE745;font-size: 48rpx;width: 360rpx;margin: 0 auto;}
+.get-prize-cont{font-size: 24rpx;color: #666;margin-left: 70rpx;margin-bottom: 40rpx;}
+.get-prize-title{font-size: 28rpx;margin-bottom: 14rpx;}
+.get-prize-step{margin-bottom: 30rpx;}
+.get-prize-btn{
+  width: 380rpx;height: 130rpx;margin: 0 auto;
+}
+.get-prize-btn-img{display: block;width: 100%;height: 100%;background: #ddd}
+.slide-up{
+	animation: slideup .3s linear
+}
+@keyframes slideup {
+	from {
+		transform: translateY(100%)
+	}
+
+	to {
+		transform: translateY(0)
+	}
+}
+.slide-down{
+	animation: slidedown .3s linear
+}
+@keyframes slidedown {
+	from {
+		transform: translateY(0)
+	}
+
+	to {
+		transform: translateY(100%)
+	}
+}
+.no-gift-dialog{
+  position: absolute;margin-left: -335rpx;margin-top:-390rpx;left: 50%;top: 50%;
+  background: rgba(255, 255, 255, 0.9);
+  width: 670rpx;height: 780rpx;border-radius: 30rpx;overflow: hidden;
+  /* margin: 278rpx auto 0; */
+}
+.sad-face{display: block;width: 200rpx;height: 200rpx;margin: 120rpx auto 40rpx;background: yellow}
+.no-gift-text{color: #666;text-align: center;margin-bottom: 136rpx;}
+.no-gift-big-text{font-size: 52rpx;margin-bottom: 4rpx}
+.no-gift-small-text{font-size: 36rpx;}
+.no-gift-btns{padding: 0 70rpx;display: flex;justify-content: space-between;align-items: center;}
+.no-gift-btn{width: 288rpx;height: 130rpx;background: #ddd}
+.no-gift-btn-img{display: block;width: 100%;height: 100%}
