--- a/pages/boxes/boxes.wxss
+++ b/pages/boxes/boxes.wxss
@@ -6,8 +6,8 @@
   position: fixed;left: 0;bottom: 0;width: 100%;height: 100%;
   background: rgba(0, 0, 0, 0.5);
 }
-.game-big-poster-view{display: block;width: 100%;height: 100%;overflow: hidden;}
-.download-btn-view{width: 100%;height: 140rpx;position: relative;}
+.game-big-poster-view{display: block;width: 100%;height: 100%;overflow: hidden;position: relative;}
+.download-btn-view{width: 100%;height: 140rpx;position: absolute;left: 0;bottom: 0}
 .download-btn{display: block;width: 100%;height: 100%}
 .reserve-arrow{
   position: absolute;left: 360rpx;bottom: -8rpx;
@@ -225,12 +225,12 @@ button::after{border: none}
   width: 670rpx;height: 780rpx;border-radius: 30rpx;overflow: hidden;
   /* margin: 278rpx auto 0; */
 }
-.sad-face{display: block;width: 200rpx;height: 200rpx;margin: 120rpx auto 40rpx;background: yellow}
+.sad-face{display: block;width: 200rpx;height: 200rpx;margin: 120rpx auto 40rpx;}
 .no-gift-text{color: #666;text-align: center;margin-bottom: 136rpx;}
 .no-gift-big-text{font-size: 52rpx;margin-bottom: 4rpx}
 .no-gift-small-text{font-size: 36rpx;}
 .no-gift-btns{padding: 0 70rpx;display: flex;justify-content: space-between;align-items: center;}
-.no-gift-btn{width: 288rpx;height: 130rpx;background: #ddd}
+.no-gift-btn{width: 288rpx;height: 130rpx;}
 .no-gift-btn-img{display: block;width: 100%;height: 100%}
 .nomore-key-big-text{font-size: 52rpx;color: #666;text-align: center;margin-bottom: 4rpx}
 .nomore-key-small-text{font-size: 36rpx;color: #666;text-align: center;margin-bottom: 76rpx}
