--- a/pages/boxes/boxes.wxss
+++ b/pages/boxes/boxes.wxss
@@ -20,7 +20,11 @@
 .r-swiper-item{
   width: 100%;height: 100%;overflow: hidden;
 }
-.slide-image{display: block;width: 500rpx;height: 300rpx;border-radius: 20rpx;margin: 30rpx auto;}
+.slide-image{
+  display: block;width: 500rpx;height: 300rpx;border-radius: 20rpx;margin: 30rpx auto;transform: scale(0.8);
+  transition: all 0.3s ease;
+}
+.slide-image-active{transform: scale(1);}
 .boxs-view{color: #7A70C8;font-size: 28rpx;padding: 60rpx 46rpx 0;position: relative;}
 .open-box-title{font-size: 52rpx;margin-bottom: 20rpx}
 .boxs-gift-square{width: 484rpx;height: 484rpx;margin: 320rpx auto 94rpx;position: relative;}
@@ -85,7 +89,7 @@ button::after{border: none}
 .prize-text{margin-left: 14rpx;max-width: 300rpx;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
 .look-detail-text{color: #E5E7ED;font-size: 24rpx;margin: -6rpx 20rpx 0 0}
 .rank-dot-line{width: 640rpx;height: 2rpx;border-top: 2rpx dotted rgba(199, 199, 204, 0.35);margin: 0 auto 30rpx;}
-.rank-swiper{height: 300rpx;}
+/* .rank-swiper{height: 100rpx;overflow-y: auto;} */
 .gift-botom-line{width: 670rpx;height: 2rpx;background: rgba(255, 255, 255, 0.2);margin: 0 auto 60rpx;}
 .rules-cont{overflow: hidden;}
 .rule-list-cont{
